<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".MainActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:id="@+id/goto_mypage"
            android:src="@mipmap/ic_launcher_round"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_first_title"
            android:text="@string/main_first_title"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:textColor="@color/black"

            app:layout_constraintTop_toBottomOf="@id/goto_mypage"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_second_title"
            android:text="@string/main_second_title"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:textSize="25sp"
            android:textColor="@color/black"

            app:layout_constraintTop_toBottomOf="@id/main_first_title"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/onAirText"
            android:text="@string/main_onair_title"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"

            app:layout_constraintTop_toBottomOf="@id/main_second_title"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/onAirSwitch"
            android:layout_marginLeft="10dp"
            android:thumb="@drawable/bg_onair_thumb"
            android:track="@drawable/bg_onair_track"

            app:layout_constraintTop_toTopOf="@id/onAirText"
            app:layout_constraintBottom_toBottomOf="@id/onAirText"
            app:layout_constraintLeft_toRightOf="@id/onAirText"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:id="@+id/frameLayout"

            app:layout_constraintTop_toBottomOf="@id/onAirText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"></FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>